<resources>
    <string name="app_name">SplitIt</string>
    <string name="text_headline_6">20</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="logout">LogOut</string>
    <string name="settings">settings</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration_btn">Sei nuovo? Registrati!</string>
    <string name="registration_tv">Compila il form e procedi con la registrazione</string>
    <string name="error_register_mail">Errore! La mail è già stata registrata.</string>
    <string name="error_register">Errore! Controlla i dati e riprova.</string>
    <string name="error_register_password">Errore! La password non coincide.</string>

    <string name="la_tua_email">La tua email</string>
    <string name="la_tua_password">La tua password</string>
    <string name="reinserisci_la_password">Reinserisci la Password</string>
    <string name="registrati">Registrati</string>
    <string name="registration_success">Registrazione avvenuta con successo!</string>

    <string name="error_login">Errore! Controlla i dati e riprova.</string>
    <string name="qrcode">qrcode</string>
    <string name="group_image">group image</string>
    <string name="group_name">group name</string>
    <string name="add_group">add group</string>
    <string name="nome_utente">Nome Utente</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="storico">Storico</string>
    <string name="bilancio">Bilancio</string>
    <string name="profile">Profilo</string>
    <string name="mostra_qrcode">Mostra QrCode</string>
    <string name="close">Close</string>
    <string name="splash_bg">splash bg</string>
    <string name="fingerprint">fingerprint</string>
    <string name="bg_qrcode">bg qrCode</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="deleteuser">deleteUser</string>
    <string name="clicca_per_l_autenticazione_biometrica">Clicca per l\'autenticazione biometrica</string>
    <string name="user_code">user_code</string>
    <string name="user_id">user_id</string>
    <string name="user_email">user_email</string>
    <string name="tv_user_code">tv_user_code</string>
    <string name="user_img">user_img</string>
    <string name="scheda_informazioni">Scheda informazioni</string>
    <string name="user_name">user_name</string>
    <string name="billing">billing</string>
    <string name="aggiungi_utente">Aggiungi utente</string>
    <string name="scanned_data">scanned_data</string>
    <string name="metodo_di_aggiunta">Scegli metodo di aggiunta</string>
    <string name="scannerizza_qrCode">Scannerizza QrCode</string>
    <string name="digita_codice">Digita codice</string>
    <string name="digita_il_codice">Digita il codice</string>
    <string name="il_mio_importo">Il mio importo</string>
    <string name="digita_l_importo">Digita l\'importo</string>
    <string name="title_activity_registrarion2">RegistrarionActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="returnBack">return</string>
    <string name="conferma">Conferma</string>
    <string name="nome_cognome">NOME COGNOME</string>
    <string name="codice_utente">codice utente</string>
    <string name="modifica">Modifica</string>
    <string name="digita_codice_utente">Digita codice utente</string>
    <string name="oppure">oppure</string>
    <string name="qr_code_found">QR Code Found</string>
    <string name="es_abcd12345">Es: ABCD12345</string>


</resources>