<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/dashboard" />
    </group>

    <item android:title="@string/transactions">
        <menu>
            <group>
                <item
                    android:id="@+id/nav_storico"
                    android:title="@string/storico" />

                <item
                    android:id="@+id/nav_bilancio"
                    android:title="@string/bilancio" />
            </group>
        </menu>
    </item>

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
