<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fillViewport="true"
        android:gravity="center"
        android:scrollbarStyle="insideOverlay">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="44dp"
                android:contentDescription="@string/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/splitit_logo_circle" />

            <EditText
                android:id="@+id/etEmailLogin"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="72dp"
                android:autofillHints="@string/nome_utente"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/etPasswordLogin"
                android:layout_width="255dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:autofillHints="@string/password"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmailLogin" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="186dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="52dp"
                android:background="@drawable/gradient_btn"
                android:onClick="login"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                app:backgroundTint="@color/purple_200"
                app:backgroundTintMode="multiply"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordLogin" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/gradient_btn"
                android:onClick="register"
                android:text="@string/registration_btn"
                android:textColor="#FFFFFF"
                app:backgroundTint="@color/purple_200"
                app:backgroundTintMode="multiply"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

            <ImageView
                android:id="@+id/bioauth_btn"
                android:layout_width="82dp"
                android:layout_height="84dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/fingerprint"
                android:onClick="biometricAuthentication"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:srcCompat="@drawable/ic_baseline_fingerprint_24" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:text="@string/clicca_per_l_autenticazione_biometrica"
                android:textColor="#FFFCFC" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_side_bg" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:contentDescription="@string/registration_btn"
        android:minWidth="48dp"
        android:onClick="register"
        app:srcCompat="@drawable/ic_add_img"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
