<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="387dp"
                android:layout_height="73dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="48dp"
                android:gravity="center"
                android:text="@string/registration_tv"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="252dp"
                android:layout_height="48dp"
                android:drawableStart="@android:drawable/ic_dialog_email"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/la_tua_email"
                android:inputType="textEmailAddress"
                android:singleLine="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextNomeUtente" />

            <EditText
                android:id="@+id/editTextNomeUtente"
                android:layout_width="252dp"
                android:layout_height="48dp"
                android:layout_marginTop="48dp"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/nome_utente"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />


            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="255dp"
                android:layout_height="48dp"
                android:layout_marginTop="48dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/la_tua_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

            <EditText
                android:id="@+id/etPasswordRegistrationCheck"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:layout_marginTop="48dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/reinserisci_la_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            <Button
                android:id="@+id/button2"
                android:layout_width="180dp"
                android:layout_height="48dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="131dp"
                android:background="@drawable/gradient_btn"
                android:onClick="checkRegistration"
                android:text="@string/registrati"
                app:backgroundTint="@color/purple_200"
                app:backgroundTintMode="multiply"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPasswordRegistrationCheck"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/returnBack"
        android:onClick="onReturnPressed"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/ic_back_img" />


</RelativeLayout>