<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/single_card"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/purple"
    app:cardCornerRadius="10dp"
    app:strokeWidth="1dp"
    app:strokeColor="@color/material_on_surface_stroke">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_user_card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            android:clickable="false"/>

        <ImageView
            android:id="@+id/card_user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/purple_500"
            android:contentDescription="@string/group_image"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/white"
                android:visibility="visible"
                tools:text="@string/nome_utente" />

            <TextView
                android:id="@+id/tw_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/white"
                android:visibility="visible"
                tools:text="Admin" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ImageView
            android:id="@+id/delete_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/deleteuser"
            app:srcCompat="@android:drawable/ic_delete" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>